* (bug 33224) add variants of content language to meta=siteinfo
* (bug 36761) "Mark pages as visited" now submits previously established filter options
* (bug 32643) action=purge with forcelinkupdate no longer crashes when ratelimit is reached
* The paraminfo module now also contains result properties for most modules
* (bug 32348) Allow descending order for list=alllinks

=== Languages updated in 1.20 ===

MediaWiki supports over 350 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

* Emilian (egl) added.
* Tornedalen Finnish (fit) added.
* Mizo (lus) added.
* Santali (sat) added.
* (bug 34192) Namespace gender aliases for Albanian languages (sq & aln).
* (bug 35541) Namespace gender aliases for Croatian (hr).
* (bug 36012) Space in $separatorTransformTable should be non-breaking in
  Portuguese, Esperanto and Udmurt.

=== Other changes in 1.20 ===
* The user_token field is now left empty until a user attempts to login and
  cookies need to be set. It is also now possible to reset every user's
  user_token simply by clearing the values in the user_token column.
* Removed ./tests/qunit/index.html from core. It wasn't actively maintained and
  has been made obsolete when [[Special:JavaScriptTest/qunit]] was introduced,
  which actually uses ResourceLoader, LocalSettings and the Skin.
* Removed $wgDBtransactions global. This was only checked in one class
  and only applies to MyISAM or similar DBs. Those should only be used
  for archived sites anyway. We can't get edit conflicts on such sites,
  so the WikiPage code wasn't useful there either.

== Compatibility ==

MediaWiki 1.20 requires PHP 5.3.2. PHP 4 is no longer supported.

MySQL is the recommended DBMS. PostgreSQL or SQLite can also be used, but
support for them is somewhat less mature. There is experimental support for IBM
DB2 and Oracle.

The supported versions are:

* MySQL 5.0.2 or later