@@ -153,6 +153,7 @@ upgrade PHP if you have not done so prior to upgrading MediaWiki.
 * (bug 32643) action=purge with forcelinkupdate no longer crashes when ratelimit is reached
 * The paraminfo module now also contains result properties for most modules
 * (bug 32348) Allow descending order for list=alllinks
+* (bug 31777) Upload unknown error ``fileexists-forbidden''
 
 === Languages updated in 1.20 ===
 
